--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ node_modules/
 dist/
 npm-debug.log
 yarn-error.log
-.apuntes
+
+# Ignorar apuntes
+apuntes.md
+README.md
 
 # End of https://www.toptal.com/developers/gitignore/api/vuejs
